# portfolio

./: README.md  merge_ll.cpp  reverse_ll.c
Emwin/: AZP_SW73
Linux_Audio_Play/: AudioMgr.cpp  AudioMgr.h  Makefile  logger.h  main.cpp
Linux_FB_Manipulaton/: myFB.cpp  myFB.h
Linux_libadv/: .gitignore  ChangeLog.int  Makefile.am  configure.ac  configure.lineno
Linux_libadv/inc/: IF.h  adv7181c.h  adv7611.h  cs53l21.h  libadv.h  libadv_common.h
Linux_libadv/src/: IF.c  Makefile.test  adv7181c.c  adv7611.c  cs53l21.c  libc2adv_common.c  libc2adv_test  main.c
Linux_libcharger/: ChangeLog  Makefile.am  README  configure.ac  libc2charger.cfg
Linux_libcharger/inc/: libc2charger.h  libc2charger_cfg.h  libc2charger_common.h
Linux_libcharger/src/: Makefile.test  battery_values.c  libc2charger.c  libc2charger_test  main.c
Linux_libi2c/: Makefile.am  README  configure.ac
Linux_libi2c/inc/: i2cbusses.h  libi2c.h  libi2c_common.h
Linux_libi2c/src/: i2cbusses.c  i2cget.c  i2cset.c  libc2i2c_common.c  util.c
Linux_library/: HINTs.txt
Linux_library/inc/: adhoc.h  aes.h  check_ts.h  common.h  corespi.h  flag.h  ftp_client.h  m_list.h  macro.h  md5.h  mpegts.h  net.h  new_aes.h  ping.h  ringbuffer.h  serial.h
Linux_library/src/: adhoc.c  aes.c  check_ts.c  common.c  corespi.c  crc32.c  fec.c  flag.c  ftp_client.c  m_list.c  md5.c  mpegts.c  net.c  new_aes.c  ping.c  qos.c  ringbuffer.c  serial.c  terminal.c
Log_C/: log.c  log.h  main.c
Log_Cpp/: logger.cpp  logger.h  main.cpp
circular_file_driver/: Makefile.omap  Makefile.pc  README.txt  circular_file.c  circular_file.h  main.c
hacker_rank/Balanced_Brackets/: README.txt  solution.cpp
hacker_rank/Jessie_And_Cookies/: README.txt  solution.cpp
mmap_comm_Cpp/: Communication.cpp  Communication.h  README
(+677 files in other folders)
